[package]
name = "archive-mn"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.11.22"
scraper = "0.18.1"
rust_xlsxwriter = "0.62.0"
once_cell = "1.18.0"
tokio = { version = "1.34.0", features = ["full", "macros", "sync"] }
itertools = "0.12.0"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
lazy_static = "1.4.0"
