[package]
name = "archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
scraper = "0.18.1"
rust_xlsxwriter = "0.56.0"
once_cell = "1.18.0"
tokio = { version = "1.34.0", features = ["macros"]}
